# Server

./: README.md
Server/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Identifiers.h  Main.cpp  Makefile  Message.cpp  Message.h  NetworkManager.cpp  NetworkManager.h  Player.cpp  Player.h  Server.cpp  Server.h  Utils.cpp  Utils.h  Validator.cpp  Validator.h  Vector2D.h
Server/Handlers/: Disconnect.cpp  Disconnect.h  Game.cpp  Game.h  IMessageHandler.cpp  IMessageHandler.h  LeafHandler.cpp  LeafHandler.h  Lobby.cpp  Lobby.h  PlayerInGame.cpp  PlayerInGame.h  PlayerInRoom.cpp  PlayerInRoom.h  PlayerSetup.cpp  PlayerSetup.h  Room.cpp  Room.h  Session.cpp  Session.h
